Support local host file in custom provider
Example:
If the host file is located at root of sdcard and the file name is hosts.txt,
then the custom URL provider is file:///mnt/sdcard/hosts.txt